syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "SmsParserService";

package smsParser;

enum Bank
{
    Default = 0;
    IdeaBank = 1;
    PriorBank = 2;
}

service SmsParserServer {
  rpc ParseSms (SmsInfo) returns (google.protobuf.Empty);
}

message SmsInfo {
  Bank bank = 1;
  string body = 2;
}
